fixed collapse button to work again, needs some aesthetic changes

--- a/web_app/static/css/dropdown.css
+++ b/web_app/static/css/dropdown.css
@@ -13,6 +13,7 @@
     outline: none;
 
     padding: 14px 16px;
+    padding-left: 0px;
     background-color: inherit;
     font-family: inherit;
     margin: 0; 
