--- a/web_app/static/css/theme.css
+++ b/web_app/static/css/theme.css
@@ -2,6 +2,7 @@
 
 body {
     margin:0;
+    padding:0;
     font-family: Inter;
     font-weight: 400;
 }
@@ -16,7 +17,10 @@ body {
     flex-direction: row;
     justify-content: center;
     align-items: flex-end;
+    text-align: center;
     padding-top: 50px;
+    padding-left:50px;
+    padding-right: 50px;
     background-color: #abc9d2;
 }
 
@@ -24,9 +28,10 @@ h1 {
     font-size: 50px;
 }
 
-h3 {
-    margin-top: 2%;
-    margin-bottom: 2%;
+h3.section-header {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding-left: 50x;
 }
 
 .navbar.navbar-expand-md.navbar-light {
@@ -34,11 +39,18 @@ h3 {
     align-content: center;
     justify-content: space-evenly;
     height: 100px;
-    font-size: 22px;
+    font-size: 20px;
     background-color: #abc9d2;
 }
 
 .collapse.navbar-collapse {
     margin: 5%;
     justify-content: space-evenly;
+}
+
+@media screen and (max-width: 768px) {
+    .navbar.navbar-expand-md.navbar-light {
+        font-size: 18px;
+    }
+    
 }
